# open-hl-portfolio

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: accounts.yml  asset_ticker_overrides.yml  attribution_policy.yml  benchmark.yml  cost_drag.yml  risk_limits.yml  txn_type_map.yml
docs/: privacy_and_redaction.md
examples/demo_data/: README.md
scripts/: fetch_hl_exports.ps1  fetch_investment_reports.ps1  fetch_prices.ps1  run_all.ps1  run_demo.ps1
sql/: marts_account_daily.sql  marts_portfolio_daily.sql  schema.sql
src/: __init__.py
src/common/: config.py  db.py  parse_utils.py  paths.py
src/fetch/: __init__.py  hl_investment_reports_fetch.py  hl_site_fetch.py
src/ingest/: __init__.py  hl_holdings_snapshot_parser.py  hl_investment_report_pdf_parser.py  hl_transactions_parser.py  hl_valuations_parser.py  run_import.py
src/marts/: __init__.py  build_asset_daily.py  build_marts.py  build_report_marts.py  report_value_gap_fill.py
src/metrics/: __init__.py  attribution.py  (+5 more)
tests/: test_asset_series.py  test_attribution.py  test_build_asset_daily.py  test_build_report_marts.py  test_concentration.py  test_cost_drag.py  test_db_schema.py  test_fetch_yfinance_prices.py  test_hl_investment_reports_fetch.py  test_holdings_snapshot_parser.py  test_investment_report_pdf_parser.py  test_parsers.py  test_performance_math.py  test_phase1_regressions.py  test_presentation_data_access.py  test_price_links.py  test_reconciliation.py  test_report_value_gap_fill.py  test_resolve_asset_tickers.py
(+28 files in other folders)
