[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hl-portfolio-analytics"
version = "0.1.0"
description = "Deposit-corrected analytics for Hargreaves Lansdown portfolio exports."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["finance", "portfolio", "analytics", "duckdb", "streamlit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.0",
  "streamlit>=1.39.0",
  "plotly>=5.24.0",
  "playwright>=1.48.0",
  "pypdf>=5.1.0",
  "yfinance>=0.2.54",
  "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
